cat name changer store

--- a/src/components/dog/Dogs.module.css
+++ b/src/components/dog/Dogs.module.css
@@ -1,15 +1,15 @@
-.row {
+/* .row {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .row:not(:last-child) {
-  margin-bottom: 16px;
+  margin-bottom: 12px;
 }
 
 .value {
-  font-size: 78px;
+  font-size: 32px;
   padding-left: 16px;
   padding-right: 16px;
   margin-top: 2px;
@@ -20,7 +20,7 @@
   appearance: none;
   border: none;
   background: none;
-  font-size: 32px;
+  font-size: 16px;
   padding-left: 12px;
   padding-right: 12px;
   outline: none;
@@ -31,16 +31,12 @@
   background-color: rgba(112, 76, 182, 0.1);
   border-radius: 2px;
   transition: all 0.15s;
-}
+} */
 
 .textbox {
-  font-size: 32px;
-  padding: 2px;
-  width: 64px;
-  text-align: center;
-  margin-right: 8px;
+  font-size: 16px;
 }
-
+/* 
 .button:hover, .button:focus {
   border: 2px solid rgba(112, 76, 182, 0.4);
 }
@@ -72,4 +68,4 @@
   width: 0%;
   opacity: 1;
   transition: 0s
-}
+} */
