--- a/n03-rxjs/src/App.css
+++ b/n03-rxjs/src/App.css
@@ -26,11 +26,11 @@
   }
 } */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
 .card {
   padding: 0em;
