--- a/n04-mui/src/index.css
+++ b/n04-mui/src/index.css
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -5,8 +6,6 @@
   font-weight: 400;
 
   color-scheme: dark;
-  /* color: rgba(255, 255, 255, 0.87);
-  background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
