--- a/s02-storybook-mui/src/App.css
+++ b/s02-storybook-mui/src/App.css
@@ -1,6 +1,11 @@
-#root {
+/* #root {
+  height: 100vh;
+  margin: 0px;
+  padding: 0;
+} */
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
