--- a/s02-storybook-mui/src/main.css
+++ b/s02-storybook-mui/src/main.css
@@ -1,4 +1,16 @@
 :root {
+  background-color: #242424;
+}
+body {
+  margin: 0;
+  overflow: hidden;
+  /* display: flex; */
+  /* place-items: center; */
+  /* min-width: 320px;
+  min-height: 100vh; */
+}
+
+/* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -67,4 +79,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
